--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         .mypost {
 
             width: 500px;
-            margin: 0px auto 0px auto;
+            margin: 0px auto 20px auto;
             padding: 20px;
 
             box-shadow: 0px 0px 3px 0px gray;
@@ -94,11 +94,22 @@
             color: white;
         }
     </style>
+    <script>
+        $(document).ready(function () {
+            fetch("http://spartacodingclub.shop/sparta_api/weather/seoul").then(res => res.json()).then(data => {
+                let numver = data['temp']
+
+                $('#temp').text(numver)
+            })
+        })
+
+    </script>
 </head>
 
 <body>
     <div class="mytitle">
         <h1>내 생의 최고의 영화들</h1>
+        <div>현재 서울의 날씨 : <span id="temp">20</span>도</div>
         <button>영화 기록하기</button>
     </div>
     <div class="mybmg">
